# sc26re

./: .gitignore  Makefile  Makefile.ghidra  Makefile.ida  Makefile.steam-fetch  README.md  flash.py  fwtool.py  requirements.txt  sums.sha256
app/: .clang-format  CMakeLists.txt  Kconfig  README.md  ble.conf  esb.conf  ibex-cdc-diag.conf  pm_static_steam_controller_ibex_nrf52833.yml  prj.conf
app/boards/: bbc_microbit_v2.overlay
app/boards/valve/steam_controller_ibex/: Kconfig.defconfig  Kconfig.steam_controller_ibex  board.cmake  board.yml  steam_controller_ibex_nrf52833-pinctrl.dtsi  steam_controller_ibex_nrf52833.dts  steam_controller_ibex_nrf52833.yaml  steam_controller_ibex_nrf52833_defconfig
app/drivers/gpio/: gpio_greenpak.c
app/dts/bindings/: vendor-prefixes.txt
app/dts/bindings/gpio/: valve,slg4l48185-gpio.yaml
app/dts/bindings/input/: valve,olympus.yaml
app/dts/bindings/misc/: valve,ibex-analog-inputs.yaml
app/dts/bindings/power/: monolithicpower,mp2733.yaml
app/socs/: nrf52833.overlay
app/src/: analog.c  analog.h  battery.c  battery.h  calibration.c  calibration.h  charge_mode.c  charge_mode.h  controller.h  esb_backend.h  esb_backend_direct.c  esb_backend_ncs.c  haptics.c  haptics.h  haptics_pwm_nrf.c  hardware.c  ibex_settings_registry.c  ibex_settings_registry.h  main.c  olympus.c  olympus.h  olympus_config.h  power.c  power.h  puck_interface.c  puck_interface.h  radio_personality.c  rgbw_led.c  rgbw_led.h  shell.c  transport.c  transport_ble.c  transport_esb.c  transport_usb.c  triton_state_report.h  valve_bootloader.c  valve_feature.c  valve_feature.h  valve_hid_report_map.c  valve_hid_report_map.h  (+5 more)
app/src/sdl/: controller_constants.h  controller_structs.h  types.h
bootstub/: README.md  linker.ld  patch-ibex-microbit.py  stub.c
openocd/: microbit-uicr-erase.cfg  microbit-uicr-provision.cfg  microbit-uicr-read.cfg  runtime-dump.cfg  stock-dump.cfg  tigard-swd.cfg
scripts/: BuildFidDb.java  build-ida-program-patterns.py  collect-zephyr-corpus.sh  fid-ignored-symbols.txt  package-ibex-fw.py  process-ida-patterns.py  sc26re-build-timestamp.sh  steam-client-manifest.py
zephyr/: .gitignore  (+1 more)
(+1 files in other folders)
